# python-project-50

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: linters-units.yml
gendiff/: tools.py  utils.py
gendiff/formatters/: plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py
tests/fixtures/: result.txt
